--- a/index.html
+++ b/index.html
@@ -255,10 +255,10 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@inproceedings{ivision2026,
-  author    = {Author Names},
+    <pre><code>@inproceedings{mao2026ivision,
+  author    = {Mao, Dayou and Lin, Yuchen and Ebadi, Ashkan and Zelek, John and Wong, Alexander and Chen, Yuhao},
   title     = {iVISION: A Long-Term Change Detection Dataset for Large-Scale Outdoor Construction Monitoring},
-  booktitle = {ICRA},
+  booktitle = {IEEE International Conference on Robotics & Automation},
   year      = {2026},
 }</code></pre>
   </div>
