--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>National Research Council Canada, Ottawa, ON, Canada</span>
-            <span class="author-block"><sup>2</sup>Vision and Image Processing Research Group, Systems Design Engineering, University of Waterloo, Waterloo, ON, Canada</span>
+            <span class="author-block"><sup>1</sup>National Research Council Canada, Canada</span>
+            <span class="author-block"><sup>2</sup>Vision and Image Processing Research Group, University of Waterloo, Canada</span>
           </div>
 
           <div class="is-size-6 publication-authors">
